@@ -10,6 +10,7 @@ Drupal 7.0, xxxx-xx-xx (development version)
       hashing and authentication schemes.
 - Usability:
     * Implemented drag-and-drop positioning for input format listings.
+    * Implemented drag-and-drop positioning for poll options.
     * Provided descriptions for user permissions.
 - Search:
     * Added support for language-aware searches.
